--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+/*Card size*/
+.cardImage {
+  width: auto;
+  height: 260px;
+}
 .App {
   text-align: center;
 }
@@ -30,7 +35,6 @@
     transform: rotate(360deg);
   }
 }
-
 /* FONT IMPORTS */
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300, 400, 700);
